Break notification text to prevent overflowing

--- a/static/css/clr.overlay.css
+++ b/static/css/clr.overlay.css
@@ -73,6 +73,7 @@ div.notifications div {
     -webkit-text-stroke: 1px black;
     text-shadow: 3px 3px 0 #000, 2px 2px 0 #000, -2px 2px 0 #000,
         -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+    word-break: break-all;
 }
 div.notifications div span.word1 {
     color: #dfffdf;
